--- a/components/Modal/Modal.module.css
+++ b/components/Modal/Modal.module.css
@@ -1,4 +1,4 @@
-.backdrop {
+/* .backdrop {
   position: fixed;
   top: 0;
   left: 0;
@@ -19,4 +19,28 @@
   width: 100%;
   position: relative;
   box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
+} */
+
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(44, 24, 16, 0.6);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 1000;
+}
+
+.modal {
+  background-color: #f9f3e8;
+  padding: 24px;
+  border-radius: 0;
+  max-width: 500px;
+  width: 100%;
+  position: relative;
+  border: 3px solid #8b6f47;
+  box-shadow: 6px 6px 0px rgba(0, 0, 0, 0.3);
 }
