--- a/app/(auth routes)/sign-in/SignInPage.module.css
+++ b/app/(auth routes)/sign-in/SignInPage.module.css
@@ -1,4 +1,3 @@
-/* ========== AUTH FORMS (LOGIN/SIGNUP) ========== */
 .mainContent {
   flex: 1;
   background-color: #f4e4c1;
@@ -75,6 +74,14 @@
   background-color: #a0522d;
   transform: translate(-1px, -1px);
   box-shadow: 4px 4px 0px rgba(0, 0, 0, 0.2);
+}
+
+.submitButton:disabled {
+  background-color: #a89079;
+  cursor: not-allowed;
+  opacity: 0.6;
+  box-shadow: none;
+  transform: none;
 }
 
 .error {
